--- a/website/newsletter/247/index.mdx
+++ b/website/newsletter/247/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /247
-title: "This Week In React #247: nuqs, Fragment Refs, Concurrent React, Apollo, shadcn, Streamdown, Waku, React-Aria | Expo Launch, Maestro, SPM, Screens, ExecuTorch, BottomSheet, Jest | Zod, Rspack, ESLint, CSS, Bun, Firefox"
+title: "This Week In React #247: Concurrent React, nuqs, Apollo, shadcn, Streamdown, Fragment Refs, Waku, React-Aria | Expo Launch, Maestro, SPM, Screens, ExecuTorch, BottomSheet, Jest | Zod, Rspack, ESLint, CSS, Bun, Firefox"
 authors: [slorber]
 date: 08-27-2025
 ---
