--- a/website/newsletter/248/index.mdx
+++ b/website/newsletter/248/index.mdx
@@ -1,14 +1,13 @@
 ---
 slug: /248
-title: "This Week In React #248: ..."
+title: "This Week In React #248: Compiler, Next.js, Activity, Forket, Vite, shadcn, React Aria, BaseUI, RTK | RN 1.0?, Nightly testing, Autolinking, Reanimated, Ottrelite, Liquid Glass, Radon | WebMCP, Node, Ripple, View Transitions"
 authors: [slorber]
 date: 09-03-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This week, we have a very diverse set of React news, but my eyes are on the React Native announcements made at React Universe Conf. Apparently, React Native 1.0 is on the horizon, and we have a bunch of related memes!
 
 <!-- truncate -->
 
@@ -20,7 +19,22 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Convex: The Database Designed for AI Coding](/emails/issues/227/convex.jpg)](https://convex.link/thisweekai)
+
+**[Convex: The Database Designed for AI Coding](https://convex.link/thisweekai)**
+
+In the age of code generation, you need a backend that you can confidently generate with AI platforms. Convex is by far and away [best in class](https://stack.convex.dev/introducing-fullstack-bench) in this respect.
+
+This is because Convex is just TypeScript, allowing you to write [queries as code](https://docs.convex.dev/functions/query-functions/) that are automatically transactional, cached, and realtime.
+
+And that’s just the beginning. With Convex, you can:
+
+- Easily schedule functions and write cron jobs
+- Set up file storage
+- Write efficient server functions
+- And so much more…
+
+[Try a Quickstart today](https://docs.convex.dev/quickstarts)
 
 ---
 
@@ -45,12 +59,13 @@ import Support from "../_support.mdx";
 - 📦 [Apollo Client 4.0 \- Framework-agnostic core, smaller bundler size, unified error handling, better TS support](https://www.apollographql.com/blog/announcing-apollo-client-4-0): Already featured last week, there’s now an official release blog post.
 - 📦 [Base UI 1.0 beta.3 \- Autocomplete \+ Combobox components](https://base-ui.com/react/overview/releases#v1-0-0-beta-3)
 - 📦 [shadcn CLI 3.1 \- Improved MCP Server](https://ui.shadcn.com/docs/mcp)
-- 📦 [MCP-UI \- Allows MCP servers to return interactive UI snippets rendered by React components](https://mcpui.dev/)
 - 📦 [Uppy 5.0 \- Headless file uploader components and hooks](https://uppy.io/blog/uppy-5.0/)
 - 📦 [React pprof 1.0 \- Render profiling flamegraphs with React, WebGL-accelerated](https://blog.platformatic.dev/introducing-next-gen-flamegraphs-for-nodejs)
 - 📦 [Redux Toolkit 2.9 \- `builder.addAsyncThunk()` API, improved performance and request cancellation](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.9.0)
 - 📦 [React-on-Rails 15.0 \- Full RSC support, early hydration](https://github.com/shakacode/react_on_rails/blob/master/docs/release-notes/15.0.0.md)
 - 📦 [Fresh 2.0 beta \- Preact framework for Deno \- Vite integration, improves HMR, `<Head>` component](https://deno.com/blog/fresh-and-vite)
+- 📦 [MCP-UI \- Allows MCP servers to return interactive UI snippets rendered by React components](https://mcpui.dev/)
+- 🎥 [Jack Herrington \- MCP-UI \+ TanStack \= Next Gen Web](https://www.youtube.com/watch?v=yVXxv_8pC44)
 - 🎥 [Web Dev Simplified \- New Next.js TypeScript Features](https://www.youtube.com/watch?v=rVdR0_Ujgq4)
 - 🎥 [Ankita Kulkarni \- This One Line of Code Fixed My Slow Next.js App \- `after()`](https://www.youtube.com/watch?v=judEJxQFrZA)
 - 🎙️ [This Month in React 2025-08 \- Nx compromised; no more throwing promises; Remix-ing new component models](https://www.reactiflux.com/transcripts/tmir-2025-08)
